tests/src/frontend/typechecking/invalid/mutable_class_object_3.sk
mutable class Foo<T>(mutable v: T)

fun no(x: mutable Foo<Foo<Int>>): void {
  _ = class(x)(mutable Foo(42))
}
